Update Ifdef vs pragma once

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -334,3 +334,19 @@
 
 * Merge 후 생기는 새로운 버그들 ㅠ.ㅠ 열심히 바로 바로 대응 중
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
+
+### Pragma Once vs ifdef
+
+#### ifdef
+
+* 낮은 버젼, 여러 컴파일러에 대한 호환성이 뛰어나다.
+* 컴파일 시, 컴파일 때마다 해당 파일을 직접 들어가서 해당 전처리가 있는지 확인한다.
+
+#### Pragma Once
+
+* 기본적으로 VS Compiler, GCC 등에서만 사용 가능하다.
+* 헤더 파일 포함의 횟수에 관계없이 단 한번만 처리를 하고 같은 파일의 경우 읽기조차 하지 않는다. -> 컴파일 속도가 매우 빨라진다.
+
+#### 결론
+
+구형 컴파일러에서도 동작을 요구하는 범용적인 소스를 작성하는 경우 `ifdef`를 사용하고 그렇지 않은 경우는 `Pragma Once`를 사용하자
