--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -350,3 +350,28 @@
 #### 결론
 
 구형 컴파일러에서도 동작을 요구하는 범용적인 소스를 작성하는 경우 `ifdef`를 사용하고 그렇지 않은 경우는 `Pragma Once`를 사용하자
+
+
+
+
+
+<br/>
+
+## 06.19
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+
+* Merge 후 생기는 새로운 버그들 ㅠ.ㅠ 열심히 바로 바로 대응 중
+* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
