Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -375,3 +375,27 @@
 
 * Merge 후 생기는 새로운 버그들 ㅠ.ㅠ 열심히 바로 바로 대응 중
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
+
+
+
+
+
+<br/>
+
+## 06.22
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+
+* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
