--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -424,3 +424,27 @@
 
 * DB Core Transaction 안정화 관련 리팩터링 진행
 * Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
+
+
+
+
+<br/>
+
+## 06.25
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+
+* DB Core Transaction Refactoring Merge
+* DB Core 대응
