Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -448,3 +448,28 @@
 
 * DB Core Transaction Refactoring Merge
 * DB Core 대응
+
+
+
+
+<br/>
+
+## 06.26
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 문서화 하고 싶은 것
+
+* QA 문서화
+* Github 최신 기술
+* [Clean Code](/contents/BasicEducation/CleanCode.md)
+* STL 공부 & 정리
+
+### 오늘 한 것
+
+* DB Core, Phase 대응
+* Phase History 코드 커버리지 확보
+* 
