--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -472,3 +472,5 @@
 
 * DB Core, Phase 대응
 * Phase History 코드 커버리지 확보
+* [https://medium.com/@baejinho/it%EC%A7%81%EA%B5%B0%EB%B3%84-%EA%B0%9C%EB%B0%9C-%EA%B8%B0%ED%9A%8D-%EB%94%94%EC%9E%90%EC%9D%B8-%EB%A7%88%EC%BC%80%ED%84%B0-%EB%8C%80%ED%91%9C-%EB%8F%99%EC%83%81%EC%9D%B4%EB%AA%BD%EC%97%90-%EB%8C%80%ED%95%98%EC%97%AC-3304929f7ab5](IT 직군별 동상이몽에 대해...)
+* [Gradle을 선택해야 하는 이유](https://engineering.linecorp.com/ko/blog/mono-repo-multi-project-gradle-plugin/)
