Update today stduying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -488,3 +488,17 @@
 * DB Core
 
 ### Docker 하느라 힘 다 뻈음..ㅎㅎ
+
+
+
+
+<br/>
+
+## 06.30
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### DB Core 안정화..
