Update today studying

--- a/contents/2020.06/06.md
+++ b/contents/2020.06/06.md
@@ -8,493 +8,7 @@
 
 <br/>
 
-## 06.01
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### [Clean Code](/contents/BasicEducation/CleanCode.md)
-
-* 마지막 요약 정리만 하면 될 듯!
-
-### Phase, UI Interface Test 커버리지 확대
-
-### STL 공부 & 정리
-
-### Phase Bug Fix
-
-### QA 문서화
-
-### 소프트웨어 테스트 방법론 공부
-
-
-
-
-<br/>
-
-## 06.02
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### [Clean Code](/contents/BasicEducation/CleanCode.md)
-
-* 마지막 요약 정리만 하면 될 듯!
-
-### Phase, UI Interface Test 커버리지 확대
-
-### STL 공부 & 정리
-
-### Phase Bug Fix
-
-### QA 문서화
-
-### 소프트웨어 테스트 방법론 공부
-
-### WSL2 Setting + Theme 까지
-
-### Github
-
-* Github Mobile
-* [Github Cloud Code Space](https://github.com/features/codespaces/?utm_source=announcement&utm_medium=blog&utm_campaign=satellite-product-recap)
-  * 즉시 개발 가능
-  * 즉각적 CI 확인 가능
-  * Visual Studio 기반
-* GitHub Discussions
-  * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
-  * 토론은 한 프로젝트에 종속되어 열림
-* GitHub Advanced Security
-  * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
-  * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
-* Github Private
-  * 무료 제공한 것! 이미 쓰고 있음
-
-
-
-
-<br/>
-
-## 06.03
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### [Clean Code](/contents/BasicEducation/CleanCode.md)
-
-* 마지막 요약 정리만 하면 될 듯!
-
-### Phase, UI Interface Test 커버리지 확대
-
-### STL 공부 & 정리
-
-### Phase Bug Fix
-
-### QA 문서화
-
-### 소프트웨어 테스트 방법론 공부
-
-### Github
-
-* Github Mobile
-* [Github Cloud Code Space](https://github.com/features/codespaces/?utm_source=announcement&utm_medium=blog&utm_campaign=satellite-product-recap)
-  * 즉시 개발 가능
-  * 즉각적 CI 확인 가능
-  * Visual Studio 기반
-* GitHub Discussions
-  * 그냥 CPP Corn이나 Stack Overflow 처럼 토론, 커뮤니티 공간 만드는 듯
-  * 토론은 한 프로젝트에 종속되어 열림
-* GitHub Advanced Security
-  * `code scanning` : 와 개쩜 CodeQL의 강력한 정적 분석 기능을 무료로 제공하는 듯!!
-  * `security` : OWASP 10 가지 취약점과 같은 일반적인 코딩 실수로부터 사용자를 보호하는 쿼리를 개발했고 제공받음!
-* Github Private
-  * 무료 제공한 것! 이미 쓰고 있음
-
-
-
-
-<br/>
-
-## 06.04
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Phase History 재설계중...
-
-
-
-
-<br/>
-
-## 06.08
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Phase History 재설계중...  (85% 정도 완료)
-
-
-
-
-
-<br/>
-
-## 06.09
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.10
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* 일단 DB Core 성능 개선한 거 머지 준비!
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.11
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* 일단 DB Core 성능 개선한 거 공지 & 머지 완료
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.15
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Phase Merge 준비
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.16
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Phase Merge
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.17
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* 자잘한 버그들 수정
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.18
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Merge 후 생기는 새로운 버그들 ㅠ.ㅠ 열심히 바로 바로 대응 중
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-### Pragma Once vs ifdef
-
-#### ifdef
-
-* 낮은 버젼, 여러 컴파일러에 대한 호환성이 뛰어나다.
-* 컴파일 시, 컴파일 때마다 해당 파일을 직접 들어가서 해당 전처리가 있는지 확인한다.
-
-#### Pragma Once
-
-* 기본적으로 VS Compiler, GCC 등에서만 사용 가능하다.
-* 헤더 파일 포함의 횟수에 관계없이 단 한번만 처리를 하고 같은 파일의 경우 읽기조차 하지 않는다. -> 컴파일 속도가 매우 빨라진다.
-
-#### 결론
-
-구형 컴파일러에서도 동작을 요구하는 범용적인 소스를 작성하는 경우 `ifdef`를 사용하고 그렇지 않은 경우는 `Pragma Once`를 사용하자
-
-
-
-
-
-<br/>
-
-## 06.19
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Merge 후 생기는 새로운 버그들 ㅠ.ㅠ 열심히 바로 바로 대응 중
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.22
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-
-<br/>
-
-## 06.23
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* DB Core Transaction 안정화 관련 리팩터링 진행
-* Phase History 재구현 완료, 다양한 테스트 케이스 확보 중
-
-
-
-
-<br/>
-
-## 06.25
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* DB Core Transaction Refactoring Merge
-* DB Core 대응
-
-
-
-
-<br/>
-
-## 06.26
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### 문서화 하고 싶은 것
-
-* QA 문서화
-* Github 최신 기술
-* [Clean Code](/contents/BasicEducation/CleanCode.md)
-* STL 공부 & 정리
-
-### 오늘 한 것
-
-* DB Core, Phase 대응
-* Phase History 코드 커버리지 확보
-* [IT 직군별 동상이몽에 대해...](https://medium.com/@baejinho/it%EC%A7%81%EA%B5%B0%EB%B3%84-%EA%B0%9C%EB%B0%9C-%EA%B8%B0%ED%9A%8D-%EB%94%94%EC%9E%90%EC%9D%B8-%EB%A7%88%EC%BC%80%ED%84%B0-%EB%8C%80%ED%91%9C-%EB%8F%99%EC%83%81%EC%9D%B4%EB%AA%BD%EC%97%90-%EB%8C%80%ED%95%98%EC%97%AC-3304929f7ab5)
-* [Gradle을 선택해야 하는 이유](https://engineering.linecorp.com/ko/blog/mono-repo-multi-project-gradle-plugin/)
-
-
-
-
-<br/>
-
-## 06.29
-
-### Framework 개발 [주 업무]
-
-* Phase Core
-* DB Core
-
-### Docker 하느라 힘 다 뻈음..ㅎㅎ
-
-
-
-
-<br/>
-
-## 06.30
+## 07.01
 
 ### Framework 개발 [주 업무]
 
@@ -502,3 +16,7 @@
 * DB Core
 
 ### DB Core 안정화..
+
+* 내 문제 아니었음!
+
+### 출시 대비 인스톨 준비
