Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -20,3 +20,21 @@
 * 내 문제 아니었음!
 
 ### 출시 대비 인스톨 준비
+
+
+
+<br/>
+
+## 07.02
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### DB Core 안정화..
+
+* 내 문제 아니었음!
+
+### 출시 대비 인스톨 준비
+### 긴급 버그 대응
