--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -23,6 +23,7 @@
 
 
 
+
 <br/>
 
 ## 07.02
@@ -37,4 +38,25 @@
 * 내 문제 아니었음!
 
 ### 출시 대비 인스톨 준비
+
+### 긴급 버그 대응
+
+
+
+
+<br/>
+
+## 07.03
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### DB Core 안정화..
+
+* 내 문제 아니었음!
+
+### 출시 대비 인스톨 준비
+
 ### 긴급 버그 대응
