Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -60,3 +60,22 @@
 ### 출시 대비 인스톨 준비
 
 ### 긴급 버그 대응
+
+
+
+
+
+<br/>
+
+## 07.06
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 출시 대비 인스톨 준비
+
+* 하루 전 마지막 준비
+
+### 긴급 버그 대응
