Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -79,3 +79,19 @@
 * 하루 전 마지막 준비
 
 ### 긴급 버그 대응
+
+
+
+
+<br/>
+
+## 07.07
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 핫픽스 준비
+
+### 긴급 버그 대응
