Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -95,3 +95,34 @@
 ### 핫픽스 준비
 
 ### 긴급 버그 대응
+
+
+
+
+<br/>
+
+## 07.078
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### DB Core 리팩토링
+
+### 긴급 버그 대응
+
+
+
+<br/>
+
+## 07.079
+
+### Framework 개발 [주 업
+
+* Phase Core
+* DB Core
+
+### DB Core 리팩토링
+
+### 긴급 버그 대응
