Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -101,7 +101,7 @@
 
 <br/>
 
-## 07.078
+## 07.08
 
 ### Framework 개발 [주 업무]
 
@@ -116,9 +116,9 @@
 
 <br/>
 
-## 07.079
+## 07.09
 
-### Framework 개발 [주 업
+### Framework 개발 [주 업무]
 
 * Phase Core
 * DB Core
@@ -126,3 +126,16 @@
 ### DB Core 리팩토링
 
 ### 긴급 버그 대응
+
+
+
+<br/>
+
+## 07.13
+
+### Framework 개발 [주 업무]
+
+* Phase Core
+* DB Core
+
+### 문서화 및 리팩토링 진행
