Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -139,3 +139,16 @@
 * DB Core
 
 ### 문서화 및 리팩토링 진행
+
+
+
+<br/>
+
+## 07.14
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링 진행
