Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -172,3 +172,18 @@
 * 경고를 오류로 처리
 * 코드 스타일 체커
 * 정적 분석
+
+
+
+<br/>
+
+## 07.16
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### Merge 준비
