Update tdoay studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -187,3 +187,21 @@
 ### 문서화 및 리팩토링
 
 ### Merge 준비
+
+
+
+<br/>
+
+## 07.17
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### Merge!!
+
+* 이제 `CString`만 빼면 MFC 종속성 제거할 수 있음ㅎㅎㅎ
+* 추 후 MFC 완전히 땐 후, 리눅스 Cross Compile 가능하게 구현하자!
