Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -205,3 +205,9 @@
 
 * 이제 `CString`만 빼면 MFC 종속성 제거할 수 있음ㅎㅎㅎ
 * 추 후 MFC 완전히 땐 후, 리눅스 Cross Compile 가능하게 구현하자!
+
+### Cross Platform Develop Reference (CMake)
+
+* <https://docs.microsoft.com/ko-kr/cpp/build/cmake-projects-in-visual-studio?view=vs-2>
+* <https://www.sysnet.pe.kr/2/0/11833>
+* <https://www.sysnet.pe.kr/2/0/11825>
