Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -211,3 +211,19 @@
 * <https://docs.microsoft.com/ko-kr/cpp/build/cmake-projects-in-visual-studio?view=vs-2>
 * <https://www.sysnet.pe.kr/2/0/11833>
 * <https://www.sysnet.pe.kr/2/0/11825>
+
+
+
+<br/>
+
+## 07.18
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### CString 제거 중
+
