Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -227,3 +227,19 @@
 
 ### CString 제거 중
 
+
+
+
+<br/>
+
+## 07.23
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### MFC 때고 남겨진 잔해들 전부다 std로 교체중
+
