Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -243,3 +243,19 @@
 
 ### MFC 때고 남겨진 잔해들 전부다 std로 교체중
 
+
+
+
+
+<br/>
+
+## 07.24
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### Transaction File 관련 남음, std::filesystem 분석 후 교체 검증 중
