Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -259,3 +259,20 @@
 ### 문서화 및 리팩토링
 
 ### Transaction File 관련 남음, std::filesystem 분석 후 교체 검증 중
+
+
+
+
+
+<br/>
+
+## 07.27
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### Undo / Redo 검증 중!
