Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -276,3 +276,22 @@
 ### 문서화 및 리팩토링
 
 ### Undo / Redo 검증 중!
+
+
+
+
+
+<br/>
+
+## 07.28
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### 검증 다 끝남 ㅎ.ㅎ
+
+### 고립성 확보 mutex 설계
