Update today studying

--- a/contents/2020.07/07.md
+++ b/contents/2020.07/07.md
@@ -294,4 +294,37 @@
 
 ### 검증 다 끝남 ㅎ.ㅎ
 
-### 고립성 확보 mutex 설계
+### Transaction ACID 중, ACD를 지키기 위한 Transaction 재 설계
+
+
+
+
+
+<br/>
+
+## 07.29
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### Transaction ACID 중, ACD를 지키기 위한 Transaction 재 설계
+
+
+
+
+<br/>
+
+## 07.30
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 문서화 및 리팩토링
+
+### Transaction ACID 중, ACD를 지키기 위한 Transaction 재 설계
