Update today studying

--- a/contents/2020.08/08.md
+++ b/contents/2020.08/08.md
@@ -15,7 +15,7 @@
 * Pha Core
 * DB Core
 
-### 마지막 안정성 위주 개발
+### 최종 MFC 때고 난 뒤 Merge 안정성 확보
 
 
 
@@ -29,4 +29,20 @@
 * Pha Core
 * DB Core
 
-### 마지막 안정성 위주 개발
+### 최종 MFC 때고 난 뒤 Merge 안정성 확보
+
+
+
+
+
+<br/>
+
+## 08.10
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 최종 MFC 때고 난 뒤 Merge 안정성 확보
+
