--- a/contents/2020.08/08.md
+++ b/contents/2020.08/08.md
@@ -46,3 +46,53 @@
 
 ### 최종 MFC 때고 난 뒤 Merge 안정성 확보
 
+
+
+
+
+
+<br/>
+
+## 08.11
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### Transaction Test Code 작성 중
+
+~~~cpp
+// 다양한 케이스 해보기
+
+// One Transaction
+// 1.  [ Create ] / Undo, Redo 1
+// 2.  [ Create + Update ] / Undo, Redo 1
+// 3.  [ Create + Update + Update ] / Undo, Redo 1
+// 4.  [ Create + Remove ] / Undo, Redo 1
+// 5.  [ Create + Update + Remove ] / Undo, Redo 1
+// 6.  [ Create + Update + Update + Remove ] / Undo, Redo 1
+
+// More Transaction
+// 101. [ Create ] [ Update ] / Undo, Redo 2
+// 102. [ Create ] [ Update + Remove ] / Undo, Redo 2
+// 103. [ Create ] [ Remove ] / Undo, Redo 2
+// 104. [ Create ] [ Update ] [ Remove ] / Undo, Redo 3
+// 105. [ Create ] [ Update ] [ Update + Remove ] / Undo, Redo 3
+// 106. [ Create ] [ Create ] [ Update(1) + Remove(1) ] + [ Create ] / Undo, Redo 4
+// 107. [ Create ] [ Create ] [ Update(2) + Remove(2) ] + [ Create ] / Undo, Redo 4
+
+// More Transaction + Harf Undo + More Transaction + Undo Redo
+// 201. [ Create ] [ Update ] / Undo / [ Create ] [ Update ] / Undo, Redo 3
+// 202. [ Create ] [ Update + Remove ] / Undo / [ Create ] [ Update + Remove ] / Undo, Redo 3
+// 203. [ Create ] [ Remove ] / Undo / [ Create ] [ Remove ] / Undo, Redo 3
+// 204. [ Create ] [ Update ] [ Remove ] / Undo / [ Create ] [ Update ] [ Remove ] / Undo, Redo 5
+// 205. [ Create ] [ Update ] [ Update + Remove ] / Undo / [ Create ] [ Update ] [ Update + Remove ] / Undo, Redo 5
+
+// Rollback Test (Fail Test)
+// 301. [ Create + Remove + Update ] / Fail, Rollback
+// 302. [ Create + Remove + Remove ] / Fail, Rollback
+// 303. [ Create ] [ Remove + Update ] / Fail, Rollback
+// 304. [ Create ] [ Remove + Update + Update ] / Fail, Rollback
+~~~
+
