Update today studying

--- a/contents/2020.08/08.md
+++ b/contents/2020.08/08.md
@@ -96,3 +96,34 @@
 // 304. [ Create ] [ Remove + Update + Update ] / Fail, Rollback
 ~~~
 
+
+
+
+
+<br/>
+
+## 08.12
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### Phase Framework Booting Bug
+
+
+
+
+
+
+
+<br/>
+
+## 08.13
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### Phase Framework Booting Bug
