--- a/contents/2020.08/08.md
+++ b/contents/2020.08/08.md
@@ -127,3 +127,22 @@
 * DB Core
 
 ### Phase Framework Booting Bug
+
+
+
+
+
+
+
+<br/>
+
+## 08.14
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### Phase Framework Booting Bug
+
+### Phase Core & Phase Interface 인수인계
