Update today studying

--- a/contents/2020.08/08.md
+++ b/contents/2020.08/08.md
@@ -146,3 +146,22 @@
 ### Phase Framework Booting Bug
 
 ### Phase Core & Phase Interface 인수인계
+
+
+
+
+
+
+
+<br/>
+
+## 08.18
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### Phase Framework Booting Bug
+
+### Phase Core & Phase Interface 인수인계
