--- a/contents/2020.08/08.md
+++ b/contents/2020.08/08.md
@@ -165,3 +165,21 @@
 ### Phase Framework Booting Bug
 
 ### Phase Core & Phase Interface 인수인계
+
+
+
+
+
+
+<br/>
+
+## 08.189
+
+### Framework 개발 [주 업무]
+
+* Pha Core
+* DB Core
+
+### 전체적으로 문서 정리
+
+### Phase Core & Phase Interface 인수인계
